feat: 实现启售菜品查询的缓存功能，并配套菜品增删改操作时清除缓存的功能；新增文档Redis应用场景规划。