@@ -1,6 +1,9 @@
 package com.foodflow.module.dish.service.impl;
 
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.foodflow.common.dto.PageQueryDTO;
 import com.foodflow.common.enums.CategoryStatusEnum;
@@ -21,8 +24,11 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -31,10 +37,39 @@ import org.springframework.stereotype.Service;
 public class DishServiceImpl extends ServiceImpl<DishMapper, Dish> implements DishService {
 
     private final DishCategoryService dishCategoryService;
+    private final StringRedisTemplate stringRedisTemplate;
+    private final ObjectMapper objectMapper;
 
+    // private static final String DISH_PAGE_CACHE_PREFIX = "foodflow:dish:page:";
+
+    // private String buildDishPageCacheKey(PageQueryDTO pageQueryDTO) {
+    // return DISH_PAGE_CACHE_PREFIX
+    //         + pageQueryDTO.getPageNo()
+    //         + ":"
+    //         + pageQueryDTO.getPageSize();
+    // }
+
+    // 用户端查询菜品信息的缓存键
+    private static final String DISH_ON_SALE_ALL_KEY = "foodflow:dish:on-sale:all";
+    private static final String DISH_ON_SALE_CATEGORY_PREFIX = "foodflow:dish:on-sale:category:";
+
+    private String buildOnSaleDishCacheKey(Long categoryId) {
+        if (categoryId == null) {
+            return DISH_ON_SALE_ALL_KEY;
+        }
+        return DISH_ON_SALE_CATEGORY_PREFIX + categoryId;
+    }
+
+    /**
+     * 创建菜品
+     * @param dishCreateDTO 创建菜品请求参数
+     * @return 创建的菜品VO
+     */
     @Override
     public DishVO createDish(DishCreateDTO dishCreateDTO) {
-        checkEnabledCategory(dishCreateDTO.getCategoryId());
+        if (dishCreateDTO.getCategoryId() != null) {
+            checkEnabledCategory(dishCreateDTO.getCategoryId());
+        }
         Dish dish = Dish.builder()
                 .categoryId(dishCreateDTO.getCategoryId())
                 .name(dishCreateDTO.getName())
@@ -46,7 +81,9 @@ public class DishServiceImpl extends ServiceImpl<DishMapper, Dish> implements Di
                 .updateTime(LocalDateTime.now())
                 .build();
 
-        saveOrUpdate(dish);
+        save(dish);
+        // 清除缓存
+        cleanDishCache();
         return toDishVO(dish);
     }
 
@@ -62,6 +99,10 @@ public class DishServiceImpl extends ServiceImpl<DishMapper, Dish> implements Di
                 .build();
     }
 
+    /**
+     * 删除菜品
+     * @param dishId 菜品ID
+     */
     @Override
     public void deleteById(Long dishId) {
         Dish dish = getById(dishId);
@@ -69,6 +110,8 @@ public class DishServiceImpl extends ServiceImpl<DishMapper, Dish> implements Di
             throw new BusinessException("菜品不存在");
         }
         removeById(dishId);
+        // 清除缓存
+        cleanDishCache();
     }
 
     @Override
@@ -88,27 +131,43 @@ public class DishServiceImpl extends ServiceImpl<DishMapper, Dish> implements Di
      */
     @Override
     public PageResult<DishVO> getDishList(PageQueryDTO pageQueryDTO) {
+        // 从数据库查询
         Page<Dish> pageParam = new Page<>(pageQueryDTO.getPageNo(), pageQueryDTO.getPageSize());
-        Page<Dish> dishPage = page(pageParam, query()
-                .orderByDesc("create_time")
-                .getWrapper());
+        Page<Dish> dishPage = page(pageParam, lambdaQuery()
+                .orderByDesc(Dish::getCreateTime));
         List<DishVO> records = dishPage.getRecords().stream()
                 .map(this::toDishVO)
                 .collect(Collectors.toList());
-        return new PageResult<>(
+        
+        // 构建分页结果集
+        PageResult<DishVO> pageResult = new PageResult<>(
                 dishPage.getTotal(),
                 pageQueryDTO.getPageNo(),
                 pageQueryDTO.getPageSize(),
                 records);
+        
+        return pageResult;
     }
 
+    /**
+     * 更新菜品信息
+     * @param dishId 菜品ID
+     * @param dishUpdateDTO 菜品更新参数
+     * @return 更新后的菜品VO
+     */
     @Override
     public DishVO updateDish(Long dishId, DishUpdateDTO dishUpdateDTO) {
         Dish dish = getById(dishId);
         if (dish == null) {
             throw new BusinessException("菜品不存在");
         }
-        checkEnabledCategory(dishUpdateDTO.getCategoryId());
+
+        // 检查菜品分类是否存在且已启用
+        if (dishUpdateDTO.getCategoryId() != null) {
+            checkEnabledCategory(dishUpdateDTO.getCategoryId());
+        }
+
+        // 更新菜品信息
         dish.setCategoryId(dishUpdateDTO.getCategoryId());
         dish.setName(dishUpdateDTO.getName());
         dish.setPrice(dishUpdateDTO.getPrice());
@@ -116,9 +175,17 @@ public class DishServiceImpl extends ServiceImpl<DishMapper, Dish> implements Di
         dish.setDescription(dishUpdateDTO.getDescription());
         dish.setUpdateTime(LocalDateTime.now());
         saveOrUpdate(dish);
+
+        // 清除缓存
+        cleanDishCache();
         return toDishVO(dish);
     }
 
+    /**
+     * 更新菜品状态
+     * @param dishId 菜品ID
+     * @param status 菜品状态
+     */
     @Override
     public void updateDishStatus(Long dishId, Integer status) {
         Dish dish = getById(dishId);
@@ -128,25 +195,79 @@ public class DishServiceImpl extends ServiceImpl<DishMapper, Dish> implements Di
         dish.setStatus(DishStatusEnum.ofCode(status));
         dish.setUpdateTime(LocalDateTime.now());
         updateById(dish);
+        cleanDishCache();
     }
 
+    /**
+     * 启售菜品查询
+     * @param categoryId 菜品分类ID(可选)
+     * @return 菜品VO列表
+     */
     @Override
     public List<DishVO> getEnabledDishList(Long categoryId) {
-        return query()
-                .eq(categoryId != null, "category_id", categoryId)
-                .eq("status", DishStatusEnum.ON_SALE)
+        // 从缓存中获取
+        String cacheKey = buildOnSaleDishCacheKey(categoryId);
+        String cachedJson = stringRedisTemplate.opsForValue().get(cacheKey);
+        if (cachedJson != null) {
+            try {
+                return objectMapper.readValue(
+                    cachedJson, 
+                    new TypeReference<List<DishVO>>() {});
+            } catch (JsonProcessingException e) {
+                throw new BusinessException("菜品缓存解析失败");
+            }
+        }
+        // 从数据库查询
+        if (categoryId != null) {
+            checkEnabledCategory(categoryId);
+        }
+        List<DishVO> result = lambdaQuery()
+                .eq(categoryId != null, Dish::getCategoryId, categoryId)
+                .eq(Dish::getStatus, DishStatusEnum.ON_SALE)
                 .list().stream()
                 .map(this::toDishVO)
-                .collect(Collectors.toList());
+                .toList();
+        
+        // 缓存结果
+        try{
+            String json = objectMapper.writeValueAsString(result);
+            stringRedisTemplate.opsForValue().set(cacheKey, json, 10, TimeUnit.MINUTES);
+        } catch (JsonProcessingException e) {
+            throw new BusinessException("菜品缓存写入失败");
+        }
+        return result;
     }
 
+    /**
+     * 检查菜品分类是否存在且已启用
+     * @param categoryId 菜品分类ID
+     */
     private void checkEnabledCategory(Long categoryId) {
+        // // 从缓存中获取
+        // String cacheKey = DISH_ON_SALE_CATEGORY_PREFIX + categoryId;
+        // Object cachedResult = redisTemplate.opsForValue().get(cacheKey);
+        // if (cachedResult != null) {
+        //     return;
+        // }
+
+        // 检查菜品分类是否存在且已启用
         DishCategory category = dishCategoryService.getById(categoryId);
         if (category == null) {
             throw new BusinessException("菜品分类不存在");
         }
         if (category.getStatus() != CategoryStatusEnum.ENABLED) {
             throw new BusinessException("菜品分类已禁用");
+        }
+    }
+
+    /**
+     * 清理菜品缓存
+     */
+    private void cleanDishCache() {
+        stringRedisTemplate.delete(DISH_ON_SALE_ALL_KEY);
+        Set<String> keys = stringRedisTemplate.keys(DISH_ON_SALE_CATEGORY_PREFIX + "*");
+        if (keys != null && !keys.isEmpty()) {
+            stringRedisTemplate.delete(keys);
         }
     }
     
